fix imagegrid gaps

--- a/templates/src/scss/components/_layout.scss
+++ b/templates/src/scss/components/_layout.scss
@@ -267,7 +267,7 @@
 
 .contentblock__imagegrid {
     display: grid;
-    gap: 1rem;
+    gap: 2rem 1rem;
     //grid-template-columns: repeat(2, 1fr);
     grid-template-columns: repeat(auto-fill,minmax(14rem,1fr));
 
@@ -277,7 +277,7 @@
     }
 
     @include breakpoint(lg) { // 1024px
-        gap: 2rem;
+        gap: 3rem 2rem;
         //grid-template-columns: repeat(auto-fit, minmax(0, 20rem));
         //grid-template-rows: auto;
     }
